# skuastpythonproject

./: .gitignore  .python-version  DISEASE_ANALYSIS_DOCUMENTATION.md  DOCUMENTATION.md  Procfile  README.md  api.py  chemical_analysis.py  chemical_training_data.csv  generate_training_data.py  main.py  ml_predictor.py  pyproject.toml  render.yaml  requirements.txt  setup.py  tree_chemical_analysis.py  tree_disease_analyzer.py  tree_yield_analysis.py  yield_analysis.py  yield_training_data.csv
data/: all_single_trees.csv  chemical_analysis_report_a001.html  chemical_analysis_report_c001.html  chemical_analysis_report_k001.html  chemical_analysis_report_k002.html  training_data.csv  tree_yield_data.csv  yield_analysis_report_A001.html  yield_analysis_report_C001.html  yield_analysis_report_K001.html
