[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "skuast-tree-analysis"
version = "2.0.0"
description = "Tree Analysis System with ML-based predictions"
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "pandas==2.2.3",
    "numpy==2.2.6",
    "scikit-learn==1.6.1",
    "joblib==1.5.1",
    "python-multipart==0.0.20",
    "pydantic==2.11.5",
    "opencv-python-headless==4.11.0.86",
    "pillow==11.2.1",
    "flask==2.3.2",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scipy==1.15.3",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "plotly==6.1.2",
    "tabulate==0.9.0"
] 